tiffany-ui/codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_events_with_review_column.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---

  Hooks
  Lifecycle hooks from config and enabled plugins.

  ⚠ 1 hook needs review before it can run.

  Event                 Installed   Active      Review      Description
  PreToolUse            1           0           1           Before a tool executes
  PermissionRequest     0           0           0           When permission is requested
  PostToolUse           0           0           0           After a tool executes
  PreCompact            0           0           0           Before context compaction
  PostCompact           0           0           0           After context compaction
  SessionStart          0           0           0           When a new session starts
  UserPromptSubmit      0           0           0           When the user submits a prompt
  SubagentStart         0           0           0           When a subagent is created
  SubagentStop          0           0           0           Right before a subagent ends its turn
  Stop                  0           0           0           Right before tiffany-loop ends its turn

  Press t to trust all; enter to review hooks; esc to close
